--- a/ch_model_selection.tex
+++ b/ch_model_selection.tex
@@ -26,7 +26,7 @@ This is the error between our model transformation and the target labels, as qua
 
 	\begin{equation}
 	PE_{true}(\theta) =L(\textbf{y} - h(\textbf{x} \cdot \theta) )  \\
-	=  (\textbf{y} - h(\textbf{x} \cdot \theta) )^2
+	=  {(\textbf{y} - h(\textbf{x} \cdot \theta) )}^2
 	\end{equation}
 
 \end{definition}
@@ -45,7 +45,7 @@ Given that any model is always built on a dataset, we are required to estimate t
 
 \begin{equation}
 	Err_{\mathrm{T}} = \Expect_{\textbf{X},\textbf{Y}} \left[ L(Y,\hat{f}(X)) | \mathrm{T}\right] \\
-	= \int_{\mathrm{T}} (y - h(x \cdot \theta) )^2 P(x,y)dxdy
+	= \int_{\mathrm{T}} {(y - h(x \cdot \theta) )}^2 P(x,y)dxdy
 \end{equation}
 
 	%\begin{equation}
@@ -81,9 +81,9 @@ With the squared loss, the prediction error $\Expect \left[ \left\Vert Y - \hat{
 
 \begin{equation}\label{squaredBiasDecomposition}
 \begin{split}
-PE( \hat{f} ) = & \Expect_X \left[  f(X) - \hat{f}(X) \right]^2 + \Expect_X \left[ \hat{f}(X)^2 \right] \\
-& - \Expect_X \left[ \hat{f}(X) \right]^2 + \sigma^2 \\
-= & Bias(\hat{f})^2 + Var(\hat{f}) + \sigma^2
+PE( \hat{f} ) = & {\Expect_X \left[  f(X) - \hat{f}(X) \right]}^2 + \Expect_X \left[ {\hat{f}(X)}^2 \right] \\
+& - {\Expect_X \left[ \hat{f}(X) \right] }^2 + \sigma^2 \\
+= & {Bias(\hat{f})}^2 + Var(\hat{f}) + \sigma^2
 \end{split}
 %= Bias(\hat{f})^2 + Var(\hat{f}) + \sigma^2
 \end{equation}
@@ -94,10 +94,10 @@ Equation \cref{squaredBiasDecomposition} is hereby designated as the \textit{bia
 Note that integration here is done over the joint distribution of inputs and outputs. As we've mentioned before, we have incomplete information on $P(x,y)$ given the finite data $ \mathrm{T}$.
 We must assume then that calculating this integral is not possible for any $\theta$ and must rely on estimation procedures.
 
-For example, we could try and sample $M$ i.i.d. points from $P(x,y)$ to approximate the integral by a Monte Carlo scheme such as
+For example, we could try and sample $M$ i.i.d.\ points from $P(x,y)$ to approximate the integral by a Monte Carlo scheme such as
 
 \begin{equation}\label{eq:mcarlo-approx}
-Err_{true}(\theta) \approx \frac{1}{M} \sum_i^M ( y - h(x \cdot \theta) )^2
+Err_{true}(\theta) \approx \frac{1}{M} \sum_i^M {( y - h(x \cdot \theta) )}^2
 \end{equation}
 
 Yet this would be unfeasible as well. Since the sampling process should be done for each specific $\theta$. Notice however the close resemblance of this equation \cref{eq:mcarlo-approx} to the form in \cref{eq:rss}.
@@ -107,7 +107,7 @@ Historically the errors due to bias and variance where associated directly with 
 For this, we use a simple series approximation
 
 \begin{equation}
-Err_{train}(\theta) \approx  \Expect_{ \mathrm{T}}[(y - h(x \cdot \theta) )^2]
+Err_{train}(\theta) \approx  \Expect_{ \mathrm{T}}[{(y - h(x \cdot \theta) )}^2]
 \end{equation}
 
 %, and can be decomposed into two types of errors
@@ -131,7 +131,7 @@ We can extend the notion of bias and variance to loss functions more general tha
 
 \begin{definition}{Systematic Value:}
 Given a training set $\mathrm{T}$, a loss function $L(\cdot)$ and a random variable $Z$, the systematic value or systematic component of this variable is
-$$ SZ = arg \ min_u \Expect_{Z} \left[ L(u,Z) \right]$$
+$$ SZ =  \argmin_u \Expect_{Z} \left[ L(u,Z) \right]$$
 \end{definition}
 
 The systematic value is the nearest constant value to the random variable, with the measure as given by the loss function. In this definition we are implicitly assuming that the necessary finiteness conditions of the expectation of the loss function with the random variable exist.
@@ -144,7 +144,7 @@ On the other hand the variance of an estimator should measure the spread of the 
 
 \begin{equation}
 \begin{split}
-& Bias(\hat{f})^2 = L(S\hat{f},SY)) \\
+& {Bias(\hat{f})}^2 = L(S\hat{f},SY) \\
 & Var(\hat{f}) = \Expect_{\hat{f}} \left[ L(\hat{f} , S\hat{f}) \right]
 \end{split}
 \end{equation}
@@ -193,8 +193,8 @@ L(Y, \hat{f}(X)) = I(Y \neq \hat{f}(X))
 With the definitoin above, the systematic and variance values then become
 \begin{equation}
 	\begin{split}
-	SY = & \arg max_{1\leq i \leq K} P(Y=i) \\
-	S\hat{f}(X) = &\arg max_{1\leq i \leq K} P(\hat{f}(X)=i) \\
+	SY = & \argmax_{1\leq i \leq K} P(Y=i) \\
+	S\hat{f}(X) = &\argmax_{1\leq i \leq K} P(\hat{f}(X)=i) \\
 	Var(Y) = &1 - P(Y=SY) \\
 	Var(\hat{f}(X)) =& 1 - P(Y = S\hat{f}(X)) \\
 	\end{split}
@@ -249,25 +249,25 @@ This means that the variance structure of the training set is such that the numb
 
 In \cref{figure-biasVariance}, the authors fit a regression model on data to illustrate the interaction between bias and variance. The model increases complexity when using a greater number of features. This is becose during the optimization procedure, the algorithm has to fit more parameters. Thus, the model increases in complexity, as measured in its degrees of freedom.
 
-\todo{do this with own data if possible? (can't overfit with logReg yet. which is the only technique introduced up to this point.)}
+\todo{do this with own data if possible? (can't overfit with logReg yet. Which is the only technique introduced up to this point.)}
 
 At first the bias of the model is high both for the training and testing sets, and as a consequence, we would expect to have a high generalization error. Then the overall error decreases as complexity increases. This behavior is expected because the model learns to better fit the data to give a better model output. We have that the expected prediction error, estimated by averaging over the test set' prediction error's, also decreases when the model's complexity is increased. However, when the model starts to overfit the data, the test error starts to rise whilst the train error keeps decreasing. This situation is important to our prediction error estimation cause it hinders that the model has lost predictive power due to an increase in variance.
 
 In this situation, a rough heuristic to select the best model is to stop increasing the model's complexity once the $EPE$ stops decreasing.
 %% EZECORRECTION: Destacar esto en la grafica anterior y explicar mas.
 
-\section{ Using the Vapnik--Chervonenkis (VC) Dimension for prediction error estimation}\label{section-VcDimension}
+\section{ Using the Vapnik-Chervonenkis (VC) Dimension for prediction error estimation}\label{section-VcDimension}
 
 %\textcite{vapnik-nature2013}
 %\textcite{cherkassky-learning2007}
 
 In Vapnik and Chervonenkis' work, the focus is on the estimation of the prediction error through the convergence and consistency of the training error. The authores derive the VC dimension as an important value in determining convergence speeds for different machine learning algorithms. In this way, a theoretical framework is provided to effectively characterize these dimensions in a constructive way. By the derived analytic bounds for a number of algorithms, we are enabled to estimate the distance between the empirical error and the generalization error.
 
-The Vapnik--Chervonenkis (VC) Dimension is a number based on a theoretical framework now called \textit{Statistical Learning Theory} (SLT). SLT is used to estimate the true expected prediction error from finite samples. Surprisingly, very few assumptions are needed and the results are distribution independent. In addition, exact bounds are given for some common use cases with constructive analytical methods. For other cases, authors propose sampling or experimental methods to estimate the VC dimension.
+The Vapnik-Chervonenkis (VC) Dimension is a number based on a theoretical framework now called \textit{Statistical Learning Theory} (SLT). SLT is used to estimate the true expected prediction error from finite samples. Surprisingly, very few assumptions are needed and the results are distribution independent. In addition, exact bounds are given for some common use cases with constructive analytical methods. For other cases, authors propose sampling or experimental methods to estimate the VC dimension.
 
 For this part, most of the results and reasoning follows the works in \textcite{cherkassky-learning2007}. For a more broad development of this work, \textcite{vapnik-nature2013} is recommended too. Here we present a brief comment on the consistency of the training error with respect to the prediction error and give example bounds for classification learners. In a supervised learning context, we use the empirical training ($\overline{err}$) or test errors ($\overline{err}_{test}$) to estimate the $EPE$.
 
-Let $\mathrm{T} = (\textbf{X},\textbf{Y})$ be a training set of $n$ samples, $Y = \{0,1 \}$ and let $\mathcal {F} = \{f(x,\theta) \mid x \in X, \theta \in \Theta\}$ be a class of classifiers where $f_\theta: X \rightarrow Y \, \forall f \in \mathcal {F}$. This is a class of functions with domain over the input dataset $X$ and which are indexed by a parameter $theta$. This parameter will represent the index over the functions in $F$ and it will vary over all possible models attainable by our algorithm.
+Let $\mathrm{T} = (\textbf{X},\textbf{Y})$ be a training set of $n$ samples, $Y = \{0,1 \}$ and let $\mathcal {F} = \big \{ f(x,\theta) \mid x \in X, \theta \in \Theta \big \}$ be a class of classifiers where $f_\theta: X \rightarrow Y \, \forall f \in \mathcal {F}$. This is a class of functions with domain over the input dataset $X$ and which are indexed by a parameter $theta$. This parameter will represent the index over the functions in $F$ and it will vary over all possible models attainable by our algorithm.
 
 As an example, in logistic regression, $theta$ can be indexed by the values of each feature's weights $x^p$. The class $F$ will then represent the set of all possible functions from which to select the final model.
 %In applications, a learner is fit from a class of functions.
@@ -304,7 +304,7 @@ We know that the training error depends on the model learned from the data and i
 
 \begin{definition}{Consistency of the Training error}
 
-Let $\{\mathcal {T}_1, \mathcal {T}_2, ..., \mathcal {T}_n, ... \}$ be a set of training samples such that $\forall n \ |T_n|=n$. Given a training sample of size $n$ and a class of learners $\Theta$, let $\theta^{*}_n$ be the argument minimizing the training error and let $\theta_0$ be the minimizing argument for the prediction error over the class of functions i.e.\ over all the models of the class.
+Let $\{\mathcal {T}_1, \mathcal {T}_2, \ldots, \mathcal {T}_n, \ldots \}$ be a set of training samples such that $\forall n \ |T_n|=n$. Given a training sample of size $n$ and a class of learners $\Theta$, let $\theta^{*}_n$ be the argument minimizing the training error and let $\theta_0$ be the minimizing argument for the prediction error over the class of functions i.e.\ over all the models of the class.
 
 Then, the training error is said to be consistent if
 
@@ -340,7 +340,7 @@ Let $\mathcal {A}= \{A_1,A_{2},\dots \}$ be a set family and $T$ a finite set. L
 The n-th shattering coefficient $\Delta_n$ of a class $\mathcal {A}$ is defined to be the maximum number of subsets of $n$ elements picked out by the class.
 
 If we consider a function from our set of classifiers, given a training set of size $n$
-$\mathcal {T} = \{ t_1,t_2,...,t_n \}$, we know that each classifier acts as an indicator function on the inputs $\{ x_1,x_2,...,x_n \}$. The \textit{diversity} of this set of classifiers intuitively represents all the diverse ways in which the input sample is partitioned by the classifiers.
+$\mathcal {T} = \{ t_1,t_2,\ldots,t_n \}$, we know that each classifier acts as an indicator function on the inputs $\{ x_1,x_2,\ldots,x_n \}$. The \textit{diversity} of this set of classifiers intuitively represents all the diverse ways in which the input sample is partitioned by the classifiers.
 
 We would say that $t$ is picked out by $\Theta$ if there exists a classifier $f_{\theta} \in \Theta$ such that $T = f_{\theta}^{-1}(\{1\})$. The classifiers in $\Theta$ define a unique mapping to the class of sets where each classifier is positive. It is said that $\mathcal {F}$ shatters a set $A$ if all its subsets are picked out by the class of functions.
 
@@ -348,9 +348,9 @@ We will now reproduce the main necessary and sufficient conditions to have unifo
 Vapnik et AL provides bounds for the exponential convergence of this error. These bounds are constructive and can be effectively calculated in a number of commonly used models such as linear regressors and support vector machines. In addition, these bounds depend \textbf{only} on the structure of the approximators rather than the true distribution of the data.
 
 
-\begin{definition}{Vapnik--Chervonenkis (VC) Dimension}
+\begin{definition}{Vapnik-Chervonenkis (VC) Dimension}
 
-The Vapnik--Chervonenkis Dimension (VC) of a class of binary functions is the cardinality of the largest set which is shattered by $\mathcal {F}$.\footnote{The VC dimension is briefly introduced here for the purpose of giving a theoretical approach to error estimation in machine learning methods. For a complete explanation on this topic, refer to \textcite{vapnik-nature2013}}
+The Vapnik-Chervonenkis Dimension (VC) of a class of binary functions is the cardinality of the largest set which is shattered by $\mathcal {F}$.\footnote{The VC dimension is briefly introduced here for the purpose of giving a theoretical approach to error estimation in machine learning methods. For a complete explanation on this topic, refer to \textcite{vapnik-nature2013}}
 \end{definition}
 
 
@@ -395,23 +395,23 @@ EPE(\theta) \leq Err^n_{train}(\theta) + \frac{\epsilon}{2} \left(1 + \sqrt{1 + 
 , and when the approximating class $F$ is infinite of size $N$:
 
 \begin{equation}
-\epsilon = a_1 \frac{h \left( ln(\frac{a_2 n}{h} ) - ln(\frac{\eta}{4} ) \right)}{n}
+\epsilon = a_1 \frac{h \left( \ln(\frac{a_2 n}{h} ) - \ln(\frac{\eta}{4} ) \right)}{n}
 \end{equation}\label{eq:vapnik-epsilonBound}
 
 or
 
 \begin{equation}
-\epsilon = 2 \frac{ ln(d) - ln(\eta)}{n}
+\epsilon = 2 \frac{ \ln(d) - \ln(\eta)}{n}
 \end{equation}\label{eq:vapnik-epsilonBoundSimple}
 
 when $F$ is finite and consists of $d$ elements.
 
-In the preceding equations, the values of constants $a_1$ and $a_2$ are related to the nature of the density function $p(t)$ of the data. However, its values are proven to be uniformly bounded for all distributions, with $a_1 \in (0,4 ]$ and $a2 \in (0,2 ]$.
+In the preceding equations, the values of constants $a_1$ and $a_2$ are related to the nature of the density function $p(t)$ of the data. However, its values are proven to be uniformly bounded for all distributions, with $a_1 \in {(0,4 ]}$ and $a2 \in {(0,2 ]}$.
 
 As a last result, the authors show that a more precise bound can be given for the function that minimizes the empirical risk $Err^n_{train}(\theta^*)$. They show that with probability $1 - 2\eta$
 
 \begin{equation}
-Err^n_{train}(\theta^*) - EPE(\theta_0) \leq \sqrt{\frac{-ln(\eta)}{2n} } + \frac{\epsilon}{2}\left( \sqrt{1 + \frac{4}{\epsilon} } \right)
+Err^n_{train}(\theta^*) - EPE(\theta_0) \leq \sqrt{\frac{-\ln(\eta)}{2n} } + \frac{\epsilon}{2}\left( \sqrt{1 + \frac{4}{\epsilon} } \right)
 \end{equation}\label{eq:vapnik-classificationBoundPrecise}
 
 These results prove that effective approximations of the prediction error can be given for most algorithms of finite VC dimensions. They also give a distinct characterization of how model complexity is related to the prediction error estimation.
@@ -432,17 +432,16 @@ In most cases data is generally scarce. At the same time prediction error estima
 
 In this procedure, a partition of the samples is called a \textit{fold}. CV then partitions the data into $K$ random separate sets or  \textit{folds}, where the number $K$ has to be previously decided.\footnote{ We assume here that a random sample of the initial dataset was already left out in order to test the model's accuracy at the end. We refer to this set as the \textit{testing set}.} Let $\gamma : \{1,..,N\} \mapsto \{1, .., K\}$ be a function mapping samples to folds. Without loss of generality, let $\alpha$ be an index of the model's hyper-parameters, where each distinct combination of the tuning parameters is identified by this index. Note that the domain of $\alpha$ will vary with the type of approximating function o algorithm used to learn.
 
- The CV algorithm now runs iterations over all the folds, and takes one fold $\gamma^{-1}(\{k\})$ to be the validation set, where $k \in [1,...,K]$ is the indexer of the iteration. $\hat{f}^{-k}$ will denote the fitted estimator on the training set with the $k$-fold hold out and its classification performance will be tested against the \textit{out of sample} estimates. This means that for every sample in this $k$-fold, we measure the loss $L(y_i, \hat{f}^{-\gamma(i)}(x_i))$ of the model's prediction against the true target value.
+ The CV algorithm now runs iterations over all the folds, and takes one fold $\gamma^{-1}(\{k\})$ to be the validation set, where $k \in [1,\ldots,K]$ is the indexer of the iteration. $\hat{f}^{-k}$ will denote the fitted estimator on the training set with the $k$-fold hold out and its classification performance will be tested against the \textit{out of sample} estimates. This means that for every sample in this $k$-fold, we measure the loss $L(y_i, \hat{f}^{-\gamma(i)}(x_i))$ of the model's prediction against the true target value.
 
 Cross validation intends to estimate the expected \textit{out-of-sample} error $\Expect \left[ L(Y, \hat{f}(X)) \right]$, when the model is tested against \textbf{independent} samples from the true distribution. For this reason, it is fundamental to ensure independence of the training set and the test set. Any transformations that must be done on the input data that jointly use the input and output samples in the process must be done and \textit{learned} only on the training set. This is because we mustn't introduce information from our test set in the estimator as the model should never \textit{see} the test data until we use it to evaluate our learner.
 
 \textbf{Tuning-parameters (hyper-parameters) Selection}:
 
- Let $\mathcal{A} = [\alpha_0, \alpha_1,..., \alpha_l  ]$ be a list of hyperparameter settings and $\mathcal{K} =[1,..,K]$ a list of folds. A full K-Fold Cross Validation procedure takes the following form.
+ Let $\mathcal{A} = [\alpha_0, \alpha_1,\ldots, \alpha_l  ]$ be a list of hyperparameter settings and $\mathcal{K} =[1,..,K]$ a list of folds. A full K-Fold Cross Validation procedure takes the following form.
 
  \begin{algorithm}%[h]
- \SetAlgoLined
- \KwResult{Data table mapping error scores $CV(\alpha) \ \forall \alpha$}
+ \SetAlgoLined\KwResult{Data table mapping error scores $CV(\alpha) \ \forall \alpha$}
  Initialize $\mathcal{A}$ and $\gamma(\cdot)$\;
  \For{ $\alpha \in \mathcal{A}$}{
  \eIf{data transformation}{
@@ -467,11 +466,11 @@ From the \textbf{CV} procedure, it makes sense to choose a final model $\hat{f}_
 
 \subsection{Choice of \texorpdfstring{$K$ parameter}{Lg} }
 
- Experimental results show the differences among CV routines used with varying $K$ number of folds. In synthetic and actual dataset~ \textcite{hastie-elemstatslearn} P. 243, have found that using a \textit{higher} value of $K$, relative to the size of the dataset, means having a bigger training fold since each left-out partition is only $\frac{N}{K}$ in size. The results show models with good bias but high variance, which is in conformity with the small size of the validation set. Note that having a higher value for $K$ will effect to a higher computational burden since $K$ estimators need to be fitted.
+ Experimental results show the differences among CV routines used with varying $K$ number of folds. In synthetic and actual dataset~\textcite{hastie-elemstatslearn} P. 243, have found that using a \textit{higher} value of $K$, relative to the size of the dataset, means having a bigger training fold since each left-out partition is only $\frac{N}{K}$ in size. The results show models with good bias but high variance, which is in conformity with the small size of the validation set. Note that having a higher value for $K$ will effect to a higher computational burden since $K$ estimators need to be fitted.
 
 Having a lower $K$ value means using a smaller training set. Then it is common to find models with lower variance and higher bias. Empirical results suggest that to show that the $EPE$ is overestimated. This is because having less available data to fit the model, implies having worse estimates from asymptotic results.
 
-One last common choice for $K$ is $N-1$. This scenario is known as \textit{leave-one-out CV} and is a very used format for problems where data arrives sequentially over time. Here, samples of the training set $t_i = ( \boldsymbol{x_i} , \boldsymbol{y_i} )$ are accessible only in an orderly fashion. For these cases model evaluations are made against the new sample and the training set is updated with every arrival.\footnote{Note that here we must assume samples to be \textit{exchangeable}. This means that the training set distribution is not altered by a permutation of samples $F(x_1,...,x_n ) = F(x_\sigma{1},...,x_\sigma{n})$ for any random permutation $\sigma$.}
+One last common choice for $K$ is $N-1$. This scenario is known as \textit{leave-one-out CV} and is a very used format for problems where data arrives sequentially over time. Here, samples of the training set $t_i = ( \boldsymbol{x_i} , \boldsymbol{y_i} )$ are accessible only in an orderly fashion. For these cases model evaluations are made against the new sample and the training set is updated with every arrival.\footnote{Note that here we must assume samples to be \textit{exchangeable}. This means that the training set distribution is not altered by a permutation of samples $F(x_1,\ldots,x_n ) = F(x_\sigma{1},\ldots,x_\sigma{n})$ for any random permutation $\sigma$.}
 
  %% EZECORRECTION: agregar aca un ejemplo en el cual reentrenar una cosa que ya tenes entrenada agregando solo 1 punto o una cantidad de puntos es mucho mas rapido hacer un pequenyo update que reentrenar con todos los puntos.
 
@@ -496,7 +495,7 @@ To assess the performance of the classification algorithm and chose the \textit{
 \renewcommand\arraystretch{1.5}
 \setlength\tabcolsep{0pt}
 \begin{tabular}{c >{\bfseries}r @{\hspace{0.7em}}c @{\hspace{0.4em}}c @{\hspace{0.7em}}l}
-\multirow{10}{*}{\parbox{1.1cm}{\bfseries\raggedleft Target\\ value $y$}} &
+\multirow{10}{*}{\parbox{1.1cm}{\bfseries\raggedleft\ Target\\ value $y$}} &
 & \multicolumn{2}{c}{\bfseries Predictive value $\hat{y}$} & \\
 & & \bfseries \^{P} \ $(0)$ & \bfseries \^{N} \ $(1)$  \\
 & P \ $(0)$ & \MyBox{True}{Positive (TP)} & \MyBox{False}{Negative (FN)} & \\[2.4em]
@@ -527,7 +526,7 @@ Some of the most used metrics include the following:
 
 %\item $F1_\beta$ \textbf{Score:} $(1 + \beta^2) \frac{TP + TN}{P + N} $ \\ This is the harmonic mean of the recall and the precision. It's advantage is that it can capture both of the scores in equal weight. Its values range in the $\[0,1 \]$ domain and are ordered in the sense that perfect classifiers have a $F1$ score of 1.
 %
-\item \textbf{F1 Score:} $\frac{TP + TN}{P + N} = \frac{TP}{TP + FP} = 2 \frac{1}{ \frac{1}{recall} + \frac{1}{precision} }$ \\ This is the harmonic mean of the recall and the precision METRICS. It's advantage is that it can capture both of the scores in equal weight. Its values range in the $[0,1 ]$ domain and are ordered in the sense that perfect classifiers have an $F1$ score of 1.
+\item \textbf{F1 Score:} $\frac{TP + TN}{P + N} = \frac{TP}{TP + FP} = 2 \frac{1}{ \frac{1}{recall} + \frac{1}{precision} }$ \\ This is the harmonic mean of the recall and the precision METRICS.\@ It's advantage is that it can capture both of the scores in equal weight. Its values range in the ${[0,1 ]}$ domain and are ordered in the sense that perfect classifiers have an $F1$ score of 1.
 
 \end{itemize}
 
@@ -560,12 +559,12 @@ To find a balance between these two rates, the ROCAUC metric measures the integr
 
 
 
-The following figure is an example ROC curve for an instance problem. Notice the algorithm's poor prediction performance where the ROCAUC is barely over the 'Luck' line. This line constitutes the performance of a \textit{random} classifier which arbitrarily labels samples as being to each possible class. It is expected to see good learners have better ROCAUC scores than the \textit{random classifier}.
+The following figure is an example ROC curve for an instance problem. Notice the algorithm's poor prediction performance where the ROCAUC is barely over the `Luck' line. This line constitutes the performance of a \textit{random} classifier which arbitrarily labels samples as being to each possible class. It is expected to see good learners have better ROCAUC scores than the \textit{random classifier}.
 
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=0.7\columnwidth]{figures/figure-lowROCAUC/figure-lowROCAUC_original}
-\caption{Example of a ROC curve from a Random Forest classifier used on the \textit{cancer} dataset. The code used to build this graph is largely based on Python's Sci-kit Learn library. \protect\footnote{For more information on `sklearn` please refer to \url{http://scikit-learn.org/stable/index.html} \protect\textcite{scikit-learn} . The cancer dataset is a copy of the UCI ML Breast Cancer Wisconsin (Diagnostic) set and is available from this same module or from \url{https://goo.gl/U2Uwz2}.} }
+\caption{Example of a ROC curve from a Random Forest classifier used on the \textit{cancer} dataset. The code used to build this graph is largely based on Python's Sci-kit Learn library. \protect\footnote{For more information on `sklearn' please refer to \url{http://scikit-learn.org/stable/index.html} \protect\textcite{scikit-learn}. The cancer dataset is a copy of the UCI ML Breast Cancer Wisconsin (Diagnostic) set and is available from this same module or from \url{https://goo.gl/U2Uwz2}.} }
 \end{center}
 \end{figure}\label{fg:lowROCAUC}
 %
